--- a/index.html
+++ b/index.html
@@ -34,16 +34,22 @@
             <div class="upcoming">
                 <h2>Coming Soon</h2>
                 <p>Some more crazy projects are coming soon here. Will update you!</p>
-                <div class="upcoming-features">
-                    <h3>Coming Updates:</h3>
-                    <ul>
-                        <li><i class="fas fa-user-check"></i> Student In and Out Details</li>
-                        <li><i class="fas fa-chart-line"></i> CGPA </li>
-                        <li><i class="fas fa-camera"></i> Student Photo </li>
-                        <li><i class="fas fa-shield-alt"></i> We will remove Phone Number snd personsl email Id</li>
-                        <li><i class="fas fa-lock"></i> DC Records and fine</li>
-                        <li><i class="fas fa-user-shield"></i> And Many More</li>
-                    </ul>
+                <div class="dropdown">
+                    <button class="dropdown-button" id="updates-dropdown">
+                        <span>View Coming Updates</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="upcoming-features" id="dropdown-content">
+                        <h3>Coming Updates:</h3>
+                        <ul>
+                            <li><i class="fas fa-user-check"></i> Student In and Out Details</li>
+                            <li><i class="fas fa-chart-line"></i> CGPA </li>
+                            <li><i class="fas fa-camera"></i> Student Photo </li>
+                            <li><i class="fas fa-shield-alt"></i> We will remove Phone Number and personal email Id</li>
+                            <li><i class="fas fa-lock"></i> DC Records and fine</li>
+                            <li><i class="fas fa-user-shield"></i> And Many More</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
